<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ActivityConstitucion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/utn_logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/banco_utn_santa_fe"
                android:textSize="25sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tasa_nominal_anual" />

            <EditText
                android:id="@+id/tasaNomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tasa_efectiva_anual"/>

            <EditText
                android:id="@+id/tasaEfecEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/capital_a_invertir"/>

        <EditText
            android:id="@+id/capitalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/diasSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="12"
                android:progress="1"/>

            <TextView
                android:id="@+id/diasTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dias_30"
                android:layout_marginRight="15dp"
                android:gravity="right"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/renovacionCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/renovacion_automatica"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/simuladorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_simulacion"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/plazoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plazo"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/capitalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capital"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/interesesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intereses_ganados"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/montoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monto_total"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/montoAnualTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monto_total_anual"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/confirmarButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/confirmar"
                android:onClick="onConfirmar"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>